manifest/voicing-llm-1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: voicing-llm
  labels:
    app.kubernetes.io/name: voicing-llm
    app.kubernetes.io/instance: voicing-llm
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: voicing-llm
    app.kubernetes.io/instance: voicing-llm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voicing-llm
  labels:
    app.kubernetes.io/name: voicing-llm
    app.kubernetes.io/instance: voicing-llm
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: voicing-llm
      app.kubernetes.io/instance: voicing-llm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voicing-llm
        app.kubernetes.io/instance: voicing-llm
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: voicing-llm
      containers:
        - name: toolace
          image: "vllm/vllm-openai:v0.8.5"
          command: ["/bin/sh","-c"]
          args: ["vllm serve voicing-ai/voicing-qwen3-30b-a3b-V2  --served-model-name voicing-llm-v1.5 --enable-auto-tool-choice --tool-call-parser hermes --load-format auto --dtype bfloat16 --gpu-memory-utilization 0.9 --max-num-batched-tokens 1024 --max-num-seq 1024 --max-model-len 65536 --disable-log-stats --tensor_parallel_size 1 --host 0.0.0.0 --port 8000"]
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: "10"
              memory: 60Gi
              nvidia.com/gpu: "1"
            requests:
              cpu: "10"
              memory: 60Gi
              nvidia.com/gpu: "1"
          volumeMounts:
            - mountPath: /root/.cache/huggingface
              name: model-cache
      volumes:
        - emptyDir: {}
          name: model-cache
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-a100-80gb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voicing-llm
  labels:
    app.kubernetes.io/name: voicing-llm
    app.kubernetes.io/instance: voicing-llm
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 3g
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-hide-headers: ""
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-pass-params: "on"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-set-headers: "true"
    nginx.ingress.kubernetes.io/proxy-websocket: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "llm-dev.nonprod.voicing.ai"
      secretName: llm-voicing-tls
  rules:
    - host: "llm-dev.nonprod.voicing.ai"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: voicing-llm
                port:
                  number: 80
